---- Changes since 1.490 ----
Root zone records files are now included in Webmin backups.
---- Changes since 1.500 ----
Added new NSEC3 algorithms for DNSSEC.
Changed the default DNSSEC algorithm from DSA to the stronger RSASHA1.
---- Changes since 1.510 ----
On Linux systems, /dev/urandom is used for generating entropy for DNSSEC.
---- Changes since 1.520 ----
Added the Delete Records In Selected button to the main page, for removing the same record in multiple domains at once.
---- Changes since 1.530 ----
The default view for new zones can now be set via an option on the Module Config page.
When adding cluster slave servers, their IPs are added to the also-notify and allow-transfer blocks of each domain added to the slave.
IPv6 addresses can now be used for remote nameservers in slave and delegation zones.
---- Changes since 1.540 ----
Added the Test Zone Transfer button to the slave zone page, to check if zone transfers are possible or not.
---- Changes since 1.550 ----
Links for editing and deleting records now using the record name instead of an index, which makes editing more reliable if records are also being updated by dynamic DNS or some other tool.
When a zone is reloaded, it is now frozed first and then thawed afterwards with the rndc command, to better support dynamic DNS.
---- Changes since 1.580 ----
The source IP and port for zone transfers can now be specific on the Addresses and Topology page.
Added support for zone signing using the DNSSEC-Tools suite, thanks to a patch from Suresh Krishnaswamy.
---- Changes since 1.600 ----
Changed all links to zones to use the zone name instead of an index, to prevent incorrect modification during concurrent access to the module.
---- Changes since 1.620 ----
Added a module configuration option to use the SPF type for Sender Permitted From records.
---- Changes since 1.660 ----
Added a warning if the chroot directory that Webmin thinks BIND is using looks wrong.