@@ -13,16 +13,22 @@ $access{'file'} || &error($text{'text_ecannot'});
 &ui_print_header($file, $text{'text_title2'}, "",
 		 undef, undef, undef, undef, &restart_links($zone));
 
-print &text('text_desc2', "<tt>$file</tt>"),"<p>\n";
-
-$text = &read_file_contents(&make_chroot($file));
-if ($text) {
-	print &ui_table_start(undef, "width=100%", 2);
-	print &ui_table_row(undef, "<pre>".&html_escape($text)."</pre>", 2);
-	print &ui_table_end();
+if (&is_raw_format_records(&make_chroot($file))) {
+	print "$text{'text_rawformat'}<p>\n";
 	}
 else {
-	print "$text{'text_none'}<p>\n";
+	print &text('text_desc2', "<tt>$file</tt>"),"<p>\n";
+
+	$text = &read_file_contents(&make_chroot($file));
+	if ($text) {
+		print &ui_table_start(undef, "width=100%", 2);
+		print &ui_table_row(undef,
+			"<pre>".&html_escape($text)."</pre>", 2);
+		print &ui_table_end();
+		}
+	else {
+		print "$text{'text_none'}<p>\n";
+		}
 	}
 
 &ui_print_footer(($tv eq "master" ? "edit_master.cgi" :
